changed(e2e tests): an attempt to fix random csrf token error on the payment page

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -127,6 +127,7 @@ services:
     arguments:
       $objectManager: '@sylius.manager.order'
       $orderFactory: '@sylius.factory.order'
+      $environment: '%kernel.environment%'
 
   AppBundle\LoopEat\Client:
     arguments:
