disabled csrf_protection in tests

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -9,6 +9,8 @@ parameters:
 
 framework:
     test: ~
+    # normally cypress e2e tests should run with CSRF protection enabled, but once in a while it fails
+    csrf_protection: false
     session:
         storage_id: session.storage.mock_file
     profiler:
@@ -97,3 +99,6 @@ services:
             $baseUri: 'https://api.urbantz.com/v2/'
 
     Symfony\Contracts\HttpClient\HttpClientInterface $urbantzClient: '@urbantz_client_mock'
+
+    security.csrf.token_manager:
+      class: AppBundle\Service\MockCsrfTokenManager
