--- a/config/packages/test/framework.yaml
+++ b/config/packages/test/framework.yaml
@@ -14,3 +14,6 @@ framework:
         scoped_clients:
             cubejs.client:
                 base_uri: "http://host.docker.internal:4000/cubejs-api/v1/"
+    form:
+      csrf_protection:
+        enabled: false
